Inclusive Learning ...: all videos on Vimeo.

--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -1228,7 +1228,8 @@
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/201527">Step 1.6</a>: Academic perspective (video, Professor Graeme Earl):
         <ul>
           <li>
-            <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqQ2dtcnRNWnoyb1U">video (<abbr>MP4</abbr> format, 473 <abbr>MB</abbr>)</a>,
+            <a href="https://vimeo.com/226279079">video (<abbr>MP4</abbr> format, 473 <abbr>MB</abbr>)</a>,
+            <!-- MP4: https://drive.google.com/open?id=0B5w8EXu9wtOqQ2dtcnRNWnoyb1U -->
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqOTRxVk1Xb2tvdU0">captions in <abbr>VTT</abbr> format</a>,
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqcFhxNl9mZHRGcmM">captions in plain text</a>.
           </li>
@@ -1254,9 +1255,10 @@
         </ul>
       </li>
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/201530">Step 1.8</a>: Student perspective (video):
-        <ul>
+        <ul><!-- folder: https://drive.google.com/drive/folders/0B5w8EXu9wtOqdm43QlNaTGF3bWs -->
           <li>
-            <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqeElTZWQycktGajA">video (<abbr>MP4</abbr> format, 400 <abbr>MB</abbr>)</a>,
+            <a href="https://vimeo.com/226329261">video (<abbr>MP4</abbr> format, 400 <abbr>MB</abbr>)</a>,
+            <!-- MP4: https://drive.google.com/open?id=0B5w8EXu9wtOqeElTZWQycktGajA -->
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqejhCWnFWaTF2WWs">captions in <abbr>VTT</abbr> format</a>,
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqeUE3UEI3VlF3a3c">captions in plain text</a>.
           </li>
@@ -1280,6 +1282,7 @@
         <a href="https://www.scope.org.uk/about-us/our-brand/social-model-of-disability">external article</a> and a 
         <a href="https://www.youtube.com/watch?v=0e24rfTZ2CQ">YouTube video</a>).
         <br /><a href="https://drive.google.com/open?id=0B5w8EXu9wtOqTDUtcExTanJST1U">The social model of disability (Word format)</a>.
+        <!-- folder: https://drive.google.com/drive/folders/0B5w8EXu9wtOqWldqdGk4ckowUVE -->
       </li>
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/180667">Step 1.11</a>: Circles of inclusion:
         <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqSGcyNVlJNndfaEE">Circles of inclusion (Word format)</a>,
@@ -1368,7 +1371,8 @@
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/183644">Step 2.3</a>: Can technology help us to communicate in an inclusive way? (video)
         <ul>
           <li>
-            <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqMENHeW4zN3JnY28">video (<abbr>MP4</abbr> format, 569 <abbr>MB</abbr>)</a>,
+            <a href="https://vimeo.com/226295966">video (<abbr>MP4</abbr> format, 569 <abbr>MB</abbr>)</a>,
+            <!-- MP4 file https://drive.google.com/open?id=0B5w8EXu9wtOqMENHeW4zN3JnY28 -->
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqQkxCZFNUUlRSYk0">captions in <abbr>VTT</abbr> format</a>,
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqcWVJclBSdDh6SEE">captions in plain text</a>.
           </li>
@@ -1388,11 +1392,13 @@
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/202823">Step 2.5</a>: Meet Lars studying computer science:
         <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqeTBpTWd3bkE2TEE">Word document</a>.
         <!-- @@contains table that belongs to lecture capture OER -->
+        <!-- Lars: Høgskolen i Oslo og Akershus (Oslo and Akershus University College of Applied Sciences) -->
       </li>
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/183847">Step 2.6</a>: How do you work with your library to improve inclusivity? (video):
         <ul>
           <li>
-            <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqb0VYeEZ2Z2hfWHc">video (<abbr>MP4</abbr> format, 325 <abbr>MB</abbr>)</a>,
+            <a href="https://vimeo.com/226308207">video (<abbr>MP4</abbr> format, 325 <abbr>MB</abbr>)</a>,
+            <!-- MP4: https://drive.google.com/open?id=0B5w8EXu9wtOqb0VYeEZ2Z2hfWHc -->
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqc25HNEN0SzZTMlE">captions in <abbr>VTT</abbr> format</a>,
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqU3RSWHVZMmxGZXc">captions in plain text</a>,
           </li>
@@ -1408,7 +1414,8 @@
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/183849">Step 2.7</a>: Student reading experience (video):
         <ul>
           <li>
-            <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqM0pYMExNTVJCLVk">video (<abbr>MP4</abbr> format, 229 <abbr>MB</abbr>)</a>,
+            <a href="https://vimeo.com/226307328/settings">video (<abbr>MP4</abbr> format, 229 <abbr>MB</abbr>)</a>,
+            <!-- MP4: https://drive.google.com/open?id=0B5w8EXu9wtOqM0pYMExNTVJCLVk -->
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqbV9pM29GV1c4S28">captions in <abbr>VTT</abbr> format</a>,
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqS01BVmlxMDBjVTA">captions in plain text</a>.
           </li>
@@ -1423,7 +1430,8 @@
       </li>
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/202827">Step 2.8</a>: Meet Mary taking a statistics course:
         <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqZDY0ZGxWSWpfNlE">Word document</a>.
-        <!-- @@doc also sits in folder "Technology and Stem Subjects": https://drive.google.com/drive/folders/0B5w8EXu9wtOqdDY1MkhhNzNHcnc -->
+        <!-- Mary: Dublin Institute of Technology & Πανεπιστήμιο Αιγαίου (University of the Aegean) -->
+        <!-- @@doc also sits in folder "Technology and Stem Subjects": https://drive.google.com/drive/folders/0B5w8EXu9wtOqdDY1MkhhNzNHcnc (duplicating https://drive.google.com/drive/folders/0B5w8EXu9wtOqd3BzaVlDRXZsWkU )-->
       </li>
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/190393">Step 2.9</a>: Technology making <abbr title="Science, Technology, Engineering and Mathematics">STEM</abbr> subjects inclusive</li>
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/194282">Step 2.10</a>: Maths notation and terminology:
@@ -1433,7 +1441,8 @@
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/201534">Step 2.11</a>: Working in <abbr>STEM</abbr> subjects, the field and laboratories:
         <ul>
           <li>
-            <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqeE96enJaZFAzaEU">video (<abbr>MP4</abbr> format, 450 <abbr>MB</abbr>)</a>,
+            <a href="https://vimeo.com/226304871">video (<abbr>MP4</abbr> format, 450 <abbr>MB</abbr>)</a>,
+            <!-- MP4: https://drive.google.com/open?id=0B5w8EXu9wtOqeE96enJaZFAzaEU -->
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqaU9LVG9YZktWYjA">captions in <abbr>VTT</abbr> format</a>,
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqMXVUM1kxaUlReDQ">captions in plain text</a>.
           </li>
@@ -1448,6 +1457,7 @@
       </li>
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/202833">Step 2.12</a>: Meet Alexander studying for a distance learning <abbr>MBA</abbr>:
         <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqbHhXUXZkemtYX1k">Word document</a>.
+        <!-- Technische Universität Dresden (Technical University Dresden) -->
       </li>
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/202112">Step 2.13</a>: Creative courses and technology:
         <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqMDhreGRUT21BVms">Word document</a>.
@@ -1456,7 +1466,8 @@
         <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqQnZVNE5lYkxiVTQ">Word document</a>.
       </li>
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/202456">Step 2.15</a>: Meet Anna doing a fashion and textile design course:
-        <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqSURMVF9uYXFLVTA">Word document</a>.
+        <a class="incorrectcopyright" href="https://drive.google.com/open?id=0B5w8EXu9wtOqSURMVF9uYXFLVTA">Word document</a>.
+        <!-- Based on DITL story by the University of York -->
       </li>
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/202553">Step 2.16</a>: Reflection:
         <ul>
@@ -1474,9 +1485,10 @@
     <ul>
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/209724">Step 3.1</a>: Welcome to week 3.</li>
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/183877">Step 3.2</a>: The pros and cons of shared learning activities (video):
-        <ul>
+        <ul><!-- folder: https://drive.google.com/drive/folders/0B5w8EXu9wtOqUXNLbEQ5bmJ3Wkk -->
           <li>
-            <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqcUJ6VUxUZ21OUWc">video (<abbr>MP4</abbr> format, 494 <abbr>MB</abbr>)</a>,
+            <a href="https://vimeo.com/226314719">video (<abbr>MP4</abbr> format, 494 <abbr>MB</abbr>)</a>,
+            <!-- MP4: https://drive.google.com/open?id=0B5w8EXu9wtOqcUJ6VUxUZ21OUWc -->
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqaUNITTJNMEZUbG8">captions in <abbr>VTT</abbr> format</a>,
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqVXNHQVozWmVnNkE">captions in plain text</a>.
           </li>
@@ -1495,9 +1507,10 @@
         <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqZEZLODJfX09lYTQ">Word document</a>.</li>
       </li>
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/201537">Step 3.4</a>: Technology power user (video):
-        <ul>
+        <ul><!-- folder: https://drive.google.com/drive/folders/0B5w8EXu9wtOqQlo1S3A3czh1Szg -->
           <li>
-            <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqaEZZQjJtTk8zZWc">video (<abbr>MP4</abbr> format, 275 <abbr>MB</abbr>)</a>,
+            <a href="https://vimeo.com/226315845">video (<abbr>MP4</abbr> format, 275 <abbr>MB</abbr>)</a>,
+            <!-- MP4: https://drive.google.com/open?id=0B5w8EXu9wtOqaEZZQjJtTk8zZWc -->
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqU0pZTFZmM3VDWFE">captions in <abbr>VTT</abbr> format</a>,
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqLTc2aldRdzJHb2c">captions in plain text</a>.
           </li>
@@ -1514,9 +1527,10 @@
         <a class="missingcopyright nocclicence" href="https://drive.google.com/open?id=0B5w8EXu9wtOqVE42cERqbzlkazg">Word document</a>.
       </li>
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/201535">Step 3.6</a>: Creating inclusive assessments (video and text):
-        <ul>
+        <ul><!-- folder: https://drive.google.com/drive/folders/0B5w8EXu9wtOqMXNiWHpJNzJvWkU -->
           <li>
-            <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqa1dMc0ozZWFQT0E">video (<abbr>MP4</abbr> format, 244 <abbr>MB</abbr>)</a>,
+            <a href="https://vimeo.com/226316936">video (<abbr>MP4</abbr> format, 244 <abbr>MB</abbr>)</a>,
+            <!-- MP4: https://drive.google.com/open?id=0B5w8EXu9wtOqa1dMc0ozZWFQT0E -->
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqdlB3RWtvT2N0TDQ">captions in <abbr>VTT</abbr> format</a>,
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqdGE0akVDMU15V1E">captions in plain text</a>.
           </li>
@@ -1532,11 +1546,13 @@
       </li>
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/202834">Step 3.7</a>: Meet Carole, a postgraduate studying History:
         <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqZXlpX3ZJX2FjSFk">Word document</a>.
+        <!-- Université Paris 8 -->
       </li>
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/201538">Step 3.8</a>: Technology for creativity and planning (video):
-        <ul>
+        <ul><!-- folder: https://drive.google.com/drive/folders/0B5w8EXu9wtOqUDEtazB2a1FvMFE -->
           <li>
-            <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqYUhpRWxhamZtTTA">video (<abbr>MP4</abbr> format, 123 <abbr>MB</abbr>)</a>,
+            <a href="https://vimeo.com/226324744">video (<abbr>MP4</abbr> format, 123 <abbr>MB</abbr>)</a>,
+            <!-- MP4: https://drive.google.com/open?id=0B5w8EXu9wtOqYUhpRWxhamZtTTA -->
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqR2ZwU1RNN2tkbGs">captions in <abbr>VTT</abbr> format</a>,
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqeUFxeUg1UUstSVU">captions in plain text</a>.
           </li>
@@ -1550,9 +1566,10 @@
         </ul>
       </li>
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/201536">Step 3.9</a>: Using multimedia for complex subjects (video):
-        <ul>
+        <ul><!-- folder: https://drive.google.com/drive/folders/0B5w8EXu9wtOqMFdZeHlydmhSUGM -->
           <li>
-            <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqczd6MER4elljRTQ">video (<abbr>MP4</abbr> format, 134 <abbr>MB</abbr>)</a>,
+            <a href="https://vimeo.com/226326571">video (<abbr>MP4</abbr> format, 134 <abbr>MB</abbr>)</a>,
+            <!-- MP4: https://drive.google.com/open?id=0B5w8EXu9wtOqczd6MER4elljRTQ -->
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqaFpOTEY0a2xIVk0">captions in <abbr>VTT</abbr> format</a>,
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqMHFpQkp6ZU1xb00">captions in plain text</a>.
           </li>
@@ -1572,7 +1589,8 @@
         <!-- OER folder: https://drive.google.com/drive/folders/0B5w8EXu9wtOqdVZQVDh1UXdoRzg -->
         <ul>
           <li>
-            <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqSHFNNWZ6ekJkVU0">video (<abbr>MP4</abbr> format, 200 <abbr>MB</abbr>)</a>,
+            <a href="https://vimeo.com/226325656">video (<abbr>MP4</abbr> format, 200 <abbr>MB</abbr>)</a>,
+            <!-- MP4: https://drive.google.com/open?id=0B5w8EXu9wtOqSHFNNWZ6ekJkVU0 -->
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqZ1h6WjBab3RET2c">captions in <abbr>VTT</abbr> format</a>,
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqbUxzTDdaVlBoV1U">captions in plain text</a>.
           </li>
