Captions support in media players.

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -257,6 +257,8 @@
         <q><em>Able Player</em> is a fully accessible cross-browser media player. It uses
         the HTML5 <code>&lt;audio&gt;</code> or <code>&lt;video&gt;</code> element for browsers that support them,
         and (optionally) the JW Player as a fallback for those that don’t.</q>
+        It also supports YouTube videos (if you provide a YouTube Data <abbr>API</abbr> key). 
+        For captions, it supports the Web<abbr>VTT</abbr> format.
         (<a href="https://www.jwplayer.com/">JW Player</a> is available under various pricing models.)
         See also
         <a href="https://github.com/ableplayer/ableplayer">Able Player's source code repository on GitHub</a>.
@@ -265,7 +267,7 @@
       <li>
         <a href="https://plyr.io/">Plyr</a>:
         <q>A simple, accessible <abbr>HTML</abbr>5 media player by <a href="https://twitter.com/sam_potts">@sam_potts</a> from <a href="https://twitter.com/selz">@selz</a></q>.
-        This is a player for YouTube and Vimeo videos.
+        This is a player for YouTube and Vimeo videos. For captions, it supports the <abbr>VTT</abbr> format.
         See the
         <a href="https://github.com/selz/plyr">source code repository on GitHub</a>.
         The code is available under the <abbr>MIT</abbr> licence.
@@ -276,6 +278,8 @@
       </li>
       <li>PayPal:
         <a href="https://github.com/paypal/accessible-html5-video-player">Accessible <abbr>HTML</abbr>5 Video Player</a>.
+        It requires direct links to video files; it does not work with links to YouTube or Vimeo videos.
+        For captions, it supports the <abbr>VTT</abbr> format.
         The code is available under the <abbr>BSD</abbr> 3-clause licence.
       </li>
       <li>Christian Heilmann:
