W. Quesenbery: Personas for Accessible UX.

--- a/personas.html
+++ b/personas.html
@@ -83,6 +83,10 @@
         at the
         University of Cambridge.
       </li>
+      <li>Whitney Quesenbery:
+        <a href="http://rosenfeldmedia.com/a-web-for-everyone/personas-for-accessible-ux/">Personas for Accessible <abbr>UX</abbr></a>,
+        <i class="website">Rosenfeld Media</i>, 15 January 2014.
+      </li>
       <li>Shawn Lawton Henry:
         <a href="http://www.uiaccess.com/accessucd/personas_eg.html">Example Personas</a>,
         from the book <i class="booktitle">Just Ask: Integrating Accessibility Throughout Design</i> (2007).
