--- a/courses.html
+++ b/courses.html
@@ -74,7 +74,7 @@
         is a <abbr>MOOC</abbr> created by the <span lang="fr">Université de Bordeaux</span> in France.
         The <a href="https://www.fun-mooc.fr/courses/inria/41012/session01/about" lang="fr">first session</a> 
         of the course started on 7 November 2016 and ran for five weeks.
-        The second run of the course started on 9 May 2017. The course requires 2 to 3 hours of study per week.
+        The second run of the course started on 9 May and ended on 17 June 2017. The course requires 2 to 3 hours of study per week.
         (See also the 
         <a href="http://www.echosciences-grenoble.fr/annonces/mooc-accessibilite-numerique-bientot-disponible-sur-la-plateforme-france-universite-numerique" lang="fr" hreflang="fr">MOOC « Accessibilité Numérique » bientôt disponible sur la plateforme France Université Numérique</a>
         on <span lang="fr">Echosciences Grenoble</span>.)
@@ -104,7 +104,7 @@
         <a href="https://www.edx.org/course/introduction-web-accessibility-microsoft-dev240x">Introduction to Web Accessibility</a>
         by Microsoft is a self-paced course hosted on edX.
         The course consists of 5 modules, each requiring 3–4 hours of effort.
-        The first run starts in 21 July 2017.
+        The first run starts in 28 July 2017.
       </li>
       <li>
         <a href="https://opencourses.desire2learn.com/cat/course/web-accessibility-7195/">Web Accessibility <abbr>MOOC</abbr> for Online Educators</a>
@@ -203,12 +203,12 @@
       <li>
         <a href="https://www.futurelearn.com/courses/autism">Understanding Autism</a>
         by the University of Kent (<abbr>UK</abbr>) is 4-week course hosted on FutureLearn.
-        The first run of the course started on 1 May 2017.
+        The first run of the course started on 1 May 2017; the second run will start on 4 September 2017.
       </li>
       <li>
         <a href="https://www.coursera.org/learn/deaf-culture">American Deaf Culture</a>
         is a six-week course by the University of Houston System hosted on Coursera.
-        The first run of the course starts on 22 May 2017.
+        The first run of the course started on 22 May 2017.
       </li>
       <li>
         <a href="https://openeducation.blackboard.com/mooc-catalog/courseDetails/view?course_id=_1257_1">Transforming learning disability services</a>
@@ -218,7 +218,7 @@
       <li>
         <a href="https://www.futurelearn.com/courses/education-for-all">Education for All: Disability, Diversity and Inclusion</a>
         by the University of Cape Town is a 6-week course on FutureLearn. It requires roughly 3 hours of study per week.
-        The second session started on 19 September 2016. The third run started on 10 April 2017.
+        The second session started on 19 September 2016. The third run started on 10 April 2017; the fourth run on 17 July 2017.
       </li>
       <li>
         <a href="https://www.futurelearn.com/courses/thinking-through-disability">Disability and a Good Life: Thinking through Disability</a>
