MS: Accessibility support for Visio.

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -87,6 +87,10 @@
         <a href="https://www.microsoft.com/enable/products/office2013/default.aspx">Accessibility in Microsoft Office 2013</a>
         on the Microsoft Accessibility website.
       </li>
+      <li>Microsoft:
+        <a href="https://support.office.com/en-us/article/Accessibility-support-for-Visio-7ac46c50-02c2-44ab-aa1c-711482099276">Accessibility support for Visio</a>:
+        covers Visio 2016.
+      </li>
     </ul>
 
     <h3 id="pdf">Portable Document Format (<abbr>PDF</abbr>)</h3>
