MS: Accessibility Testing UWP.

--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -98,6 +98,10 @@
         description of a commercial product that supports the
         development of accessible apps.
       </li>
+      <li>Microsoft Windows Dev Center:
+        <a href="https://docs.microsoft.com/en-us/windows/uwp/accessibility/accessibility-testing">Accessibility testing - <abbr title="Universal Windows Platform">UWP</abbr> app developer</a>,
+        8 February 2017.
+      </li>
       <li>
         <a href="https://www.youtube.com/watch?v=G7Ju4I5J8kY">Building and Testing Accessible Apps</a>: 
         recording of a AbilityNet webinar organised on 30 September 2014 
