--- a/courses.html
+++ b/courses.html
@@ -154,6 +154,11 @@
     <h3>Other Accessibility-Related Topics</h3>
     <ul>
       <li>
+        <a href="http://www.coursesites.com/s/_IDDITMOOCAP">Intellectual Disability and Inclusion</a>
+        is a five-week course by the Dublin Institute of Technology. 
+        The first run started on 7 August 2017.
+      </li>
+      <li>
         <a href="https://www.futurelearn.com/courses/inclusive-learning-teaching">Inclusive Learning and Teaching Environments</a>
         is a three-week course by the University of Southampton hosted on FutureLearn.
         The first run started on 5 June 2017.
