--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -290,6 +290,14 @@
       </li>
     </ul>
 
+    <h3>Cauldron</h3>
+    <ul>
+      <li>
+        <a href="https://pattern-library.dequelabs.com/">Cauldron</a>;
+        see the
+        <a href="https://github.com/dequelabs/pattern-library">GitHub repository</a>.
+      </li>
+    </ul>
   </main>
 
   <footer>
