Replaced link to Cloud4all.info.

--- a/gpii/gpii-for-developers.html
+++ b/gpii/gpii-for-developers.html
@@ -49,8 +49,10 @@
     (Global Public Inclusive Infrastructure). Cloud4all was one of the projects
     that contributed to <abbr>GPII</abbr>. For an overview of the components of
     <abbr>GPII</abbr> and which projects contribute to these components, see the 
-    <a href="http://www.cloud4all.info/the-project/the-gpii/"><abbr>GPII</abbr> 
-    page on the Cloud4all website</a>.</p>
+    <a href="http://gpii.net/Cloud4all">Cloud4all page</a>
+    on the <abbr>GPII</abbr> website.
+    <!-- <a href="http://www.cloud4all.info/the-project/the-gpii/"><abbr>GPII</abbr> 
+    page on the Cloud4all website</a> --></p>
 
     <p>This document does not explain all of Cloud4all or <abbr>GPII</abbr>; its
     goal is to explain how developers can “integrate” software programs
@@ -326,7 +328,7 @@
       <li>The setting’s value range.</li>
       <li>The setting’s relationship with other settings, if any exist. For
         example, some settings are only present in a settings file if a certain
-        other settings has a specific value, etcetera..</li>
+        other settings has a specific value, etcetera.</li>
     </ol>
 
     <p>Specify an identifier for your solution. The convention for the solution
