--- a/gpii/gpii-for-developers.html
+++ b/gpii/gpii-for-developers.html
@@ -170,7 +170,7 @@
     these.</p>
 
     <p>The <dfn>common terms</dfn> constitute a kind of lingua franca for
-    expressing preferences; they they are best thought of as “application-neutral
+    expressing preferences; they are best thought of as “application-neutral
     terms”. Common terms are names for settings or preferences that would apply
     across many applications or devices and for which the name (unique
     <abbr>ID</abbr>), data type, value space and definition are defined in the
@@ -179,7 +179,7 @@
     <code>http://registry.gpii.net/common/</code>.</p>
 
     <p><dfn>Application-specific terms</dfn> are names for settings or preferences
-    that apply to a specific device or application, that has a name, data type and
+    that apply to a specific device or application, and that have a name, data type and
     value space that are determined by the device or application for which the term
     was defined. In the current Cloud4all implementation, a solution’s
     application-specific terms belong in the namespace
@@ -328,7 +328,7 @@
       <li>The setting’s value range.</li>
       <li>The setting’s relationship with other settings, if any exist. For
         example, some settings are only present in a settings file if a certain
-        other settings has a specific value, etcetera.</li>
+        other setting has a specific value, etcetera.</li>
     </ol>
 
     <p>Specify an identifier for your solution. The convention for the solution
