--- a/index.html
+++ b/index.html
@@ -303,6 +303,14 @@
         <a href="https://www.vincit.fi/en/blog/software-development-450-words-per-minute/">Software development 450 words per minute</a>,
         <i class="blog">Vincit Blog</i>, 28.08.2017.
       </li>
+      <li>Froso Ellina:
+        <a href="https://red-badger.com/blog/2017/8/18/when-age-isnt-just-a-number">When age isn’t just a number</a>,
+        <i class="blog">Red Badger blog</i>, 18.08.2017.
+      </li>
+      <li>Priscila Zigunovas:
+        <a href="http://elearnmagazine.com/challenge-making-education-accessible/">The challenge of making education accessible to all</a>,
+        <i class="magazine">e-learn</i>, 16.08.2017 (sponsored by Blackboard).
+      </li>
       <!--
       <li>
         <a href=""></a>
