Links to page w. unsorted links.

--- a/index.html
+++ b/index.html
@@ -126,12 +126,13 @@
         <a href="http://ewallproject.eu/">eWall</a>.<!-- @@add description -->
         See the <a href="http://ewallproject.eu/documents/">downloadable documents</a>.
       </li>
-    </ul>
       <!--
       <li>
         <a href=""></a>
       </li>
       -->
+    </ul>
+    <p>Other <a href="miscellaneous-links.html">unsorted link</a>.</p>
   </div>
     <!--
       * Gez Lemon: "Accessible Drag and Drop Using WAI-ARIA", Dev.Opera, 08.09.2009: https://dev.opera.com/articles/accessible-drag-and-drop/ 
