Articles by Andrea Fercia.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -218,6 +218,14 @@
         <a href="http://elearnmagazine.com/challenge-making-education-accessible/">The challenge of making education accessible to all</a>,
         <i class="magazine">e-learn</i>, 16.08.2017 (sponsored by Blackboard).
       </li>
+      <li>Andrea Fercia:
+        <a href="https://yoast.com/dev-blog/accessibility-future-you/">Accessibility for the future you</a>,
+        <i class="blog">Yoast blog</i>, 28.07.2017.
+      </li>
+      <li>Andrea Fercia:
+        <a href="https://yoast.com/dev-blog/accessibility-slow-down-development-process/">Does accessibility slow down the development process?</a>,
+        <i class="blog">Yoast blog</i>, 31.08.2017.
+      </li>
       <!--
       <li>
         <a href=""></a>
