--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -226,6 +226,10 @@
         <a href="https://yoast.com/dev-blog/accessibility-slow-down-development-process/">Does accessibility slow down the development process?</a>,
         <i class="blog">Yoast blog</i>, 31.08.2017.
       </li>
+      <li>Gerie Owen:
+        <a href="http://searchsoftwarequality.techtarget.com/feature/Why-you-need-to-start-thinking-about-accessibility-testing-today">Why you need to start thinking about accessibility testing today</a>,
+        <i class="website">TechTarget</i>, 06.09.2017.
+      </li>
       <!--
       <li>
         <a href=""></a>
